# zstd-seekable-format-go

./: .gitignore  .goreleaser.yaml  BUILD.bazel  LICENSE  README.md  WORKSPACE  decoder.go  decoder_test.go  deps.bzl  doc.go  doc_test.go  encoder.go  encoder_test.go  example_test.go  go.mod  go.sum  reader.go  reader_fuzz_test.go  reader_options.go  reader_test.go  renovate.json  seekable.go  seekable_fuzz_test.go  seekable_test.go  writer.go  writer_options.go  writer_test.go
.github/: dependabot.yml
.github/workflows/: bazel.yml  ci.yml  codeql-analysis.yml  dependency-review.yml  go.yml  golangci-lint.yml  golangci-lint.yml.diabled  scorecard.yml  typos.yml
cmd/seekable_compress/: BUILD.bazel  main.go
cmd/zstdseek/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go
env/: BUILD.bazel  environments.go  frame_offset.go
examples/simple/: BUILD.bazel  main.go
options/: BUILD.bazel  reader_options.go  writer_options.go
pkg/: corrupt_seektable_fuzz_test.go  decoder.go  decoder_benchmark_test.go  decoder_fuzz_test.go  decoder_test.go  doc.go  encoder.go  encoder_test.go  environments.go  errors.go  example_test.go  frame_index.go  frame_offset.go  go.mod  go.sum  logger.go  options.go  reader.go  reader_cache.go  reader_cache_benchmark_test.go  reader_cache_fuzz_test.go  reader_cache_test.go  reader_fuzz_test.go  reader_options.go  reader_test.go  seek_table.go  seek_table_benchmark_test.go  seek_table_fuzz_test.go  seek_table_index.go  seek_table_index_test.go  seek_table_parser.go  seek_table_parser_test.go  seek_table_test.go  seekable.go  seekable_fuzz_test.go  seekable_test.go  writer.go  writer_options.go  writer_test.go
pkg/env/: frame_offset.go
pkg/framecache/: cache.go  cache_test.go  example_test.go  fifo.go  fuzz_test.go  intrusive_list.go  intrusive_list_test.go  key.go  key_test.go  lru.go  sieve.go  synchronized.go
pkg/testdata/: intercompat-zstdseek_v0.zst
pkg/testdata/fuzz/FuzzRoundTrip/: 4c7e5250c36d4db0
seekable/: writer.go
testdata/: intercompat-t2sz.zst
