load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "env",
    srcs = [
        "environments.go",
        "frame_offset.go",
    ],
    importpath = "github.com/SaveTheRbtz/zstd-seekable-format-go/env",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_zap//zapcore"],
)
