load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "zstdseek",
    embed = [":zstdseek_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "zstdseek_lib",
    srcs = ["main.go"],
    importpath = "github.com/SaveTheRbtz/zstd-seekable-format-go/cmd/zstdseek",
    visibility = ["//visibility:private"],
    deps = [
        "//:zstd-seekable-format-go",
        "//options",
        "@com_github_klauspost_compress//zstd",
        "@com_github_restic_chunker//:chunker",
        "@org_uber_go_zap//:zap",
    ],
)
