load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simple_lib",
    srcs = ["main.go"],
    importpath = "github.com/SaveTheRbtz/zstd-seekable-format-go/examples/simple",
    visibility = ["//visibility:private"],
    deps = [
        "//:zstd-seekable-format-go",
        "@com_github_klauspost_compress//zstd",
    ],
)

go_binary(
    name = "simple",
    embed = [":simple_lib"],
    visibility = ["//visibility:public"],
)
